; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-cli.c_freeClusterManager.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-cli.c_freeClusterManager.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32* }
%struct.TYPE_4__ = type { i32* }

@cluster_manager = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@clusterManagerUncoveredSlots = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @freeClusterManager to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @freeClusterManager() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 1), align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %22

7:                                                ; preds = %0
  %8 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 1), align 8
  %9 = call i32 @listRewind(i32* %8, i32* %1)
  br label %10

10:                                               ; preds = %13, %7
  %11 = call %struct.TYPE_4__* @listNext(i32* %1)
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %2, align 8
  %12 = icmp ne %struct.TYPE_4__* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %10
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %3, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @freeClusterManagerNode(i32* %17)
  br label %10

19:                                               ; preds = %10
  %20 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 1), align 8
  %21 = call i32 @listRelease(i32* %20)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 1), align 8
  br label %22

22:                                               ; preds = %19, %0
  %23 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 0), align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %40

25:                                               ; preds = %22
  %26 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 0), align 8
  %27 = call i32 @listRewind(i32* %26, i32* %1)
  br label %28

28:                                               ; preds = %31, %25
  %29 = call %struct.TYPE_4__* @listNext(i32* %1)
  store %struct.TYPE_4__* %29, %struct.TYPE_4__** %2, align 8
  %30 = icmp ne %struct.TYPE_4__* %29, null
  br i1 %30, label %31, label %37

31:                                               ; preds = %28
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  store i32* %34, i32** %4, align 8
  %35 = load i32*, i32** %4, align 8
  %36 = call i32 @sdsfree(i32* %35)
  br label %28

37:                                               ; preds = %28
  %38 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 0), align 8
  %39 = call i32 @listRelease(i32* %38)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 0), align 8
  br label %40

40:                                               ; preds = %37, %22
  %41 = load i32*, i32** @clusterManagerUncoveredSlots, align 8
  %42 = icmp ne i32* %41, null
  br i1 %42, label %43, label %46

43:                                               ; preds = %40
  %44 = load i32*, i32** @clusterManagerUncoveredSlots, align 8
  %45 = call i32 @dictRelease(i32* %44)
  br label %46

46:                                               ; preds = %43, %40
  ret void
}

declare dso_local i32 @listRewind(i32*, i32*) #1

declare dso_local %struct.TYPE_4__* @listNext(i32*) #1

declare dso_local i32 @freeClusterManagerNode(i32*) #1

declare dso_local i32 @listRelease(i32*) #1

declare dso_local i32 @sdsfree(i32*) #1

declare dso_local i32 @dictRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
